--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -26,6 +26,7 @@
                     </ul>
                 </div>
                 <!-- Protocol block -->
+            </div>
         </div>
     </div>
 </div>
