--- a/config/level3/welcome_en.html
+++ b/config/level3/welcome_en.html
@@ -1,6 +1,6 @@
 <div style="text-align: center">
   <h2>You've made it to the next league</h2>
-  <div>You can now <keyword>[TODO]</keyword></div>
+  <div>You will have to complete up to <keyword>12</keyword> quest cards while having 3 visible ones!</div>
   <img src="illustration.png"/>
   <div class="small">See the updated statement for details.</div>
 </div>
