--- a/config/level2/welcome_en.html
+++ b/config/level2/welcome_en.html
@@ -1,6 +1,5 @@
 <div style="text-align: center">
   <h2>You've made it to the next league</h2>
-  <div>You will have to complete up to <keyword>6</keyword> quest cards!</div>
-  <img src="illustration.png"/>
+  <div>You will have to complete <keyword>6</keyword> quests while having 1 revealed!</div>
   <div class="small">See the updated statement for details.</div>
 </div>
