--- a/config/level3/welcome_en.html
+++ b/config/level3/welcome_en.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
   <h2>You've made it to the next league</h2>
-  <div>You will have to complete <keyword>12</keyword> quests while having 3 revealed!</div>
+  <div>You will have to complete <keyword>12</keyword> quests while having <keyword>3</keyword> revealed!</div>
   <div class="small">See the updated statement for details.</div>
 </div>
