french welcome popups update

--- a/config/level3/welcome_fr.html
+++ b/config/level3/welcome_fr.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
   <h2>Vous avez atteint la ligue Bronze.</h2>
-  <div>Vous devrez terminer <keyword>12</keyword> quêtes en connaissant au maximum <keyword>3</keyword> quête à la fois !</div>
+  <div>Vous devrez terminer <keyword>12</keyword> quêtes en connaissant au maximum <keyword>3</keyword> quête à la fois&nbsp;!</div>
   <div class="small">Pour en savoir plus, allez voir l'énoncé.</div>
 </div>
