--- a/config/level2/welcome_fr.html
+++ b/config/level2/welcome_fr.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
   <h2>Vous avez atteint la ligue Bois 1</h2>
-  <div>Vous devrez terminer <keyword>6</keyword> quêtes en connaissant <keyword>1</keyword> quête à la fois !</div>
+  <div>Vous devrez terminer <keyword>6</keyword> quêtes en connaissant <keyword>1</keyword> quête à la fois&nbsp;!</div>
   <div class="small">Pour en savoir plus, allez voir l'énoncé.</div>
 </div>
